--- a/index.html
+++ b/index.html
@@ -1,12 +1,92 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>Minha Empresa</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meu Site</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        nav {
+            background-color: #333;
+        }
+        nav a {
+            color: white;
+            padding: 14px 20px;
+            display: inline-block;
+            text-decoration: none;
+        }
+        nav a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+        main {
+            padding: 20px;
+        }
+        footer {
+            background-color: #4CAF50;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            margin-top: 10px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-  <h1>Bem-vindo à minha empresa</h1>
-  <p>Site oficial — em construção</p>
+    <header>
+        <h1>Bem-vindo ao Meu Site!</h1>
+    </header>
+
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#sobre">Sobre</a>
+        <a href="#contato">Contato</a>
+    </nav>
+
+    <main>
+        <section id="home">
+            <h2>Home</h2>
+            <p>Este é o conteúdo inicial do seu site. Você pode editar este texto direto no GitHub ou no seu editor.</p>
+            <button onclick="mostrarMensagem()">Clique aqui</button>
+        </section>
+
+        <section id="sobre">
+            <h2>Sobre</h2>
+            <p>Informações sobre você ou sobre o site podem ir aqui.</p>
+        </section>
+
+        <section id="contato">
+            <h2>Contato</h2>
+            <p>Email: exemplo@email.com</p>
+        </section>
+    </main>
+
+    <footer>
+        &copy; 2025 Meu Site
+    </footer>
+
+    <script>
+        function mostrarMensagem() {
+            alert('Olá! Você clicou no botão.');
+        }
+    </script>
 </body>
 </html>
-
