--- a/index.html
+++ b/index.html
@@ -3,90 +3,134 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Site</title>
+    <title>JCube</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+        /* Reset e estilo base */
+        * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
+        }
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #121212;
+            color: #f0f0f0;
+            line-height: 1.6;
         }
         header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 20px;
+            background-color: #1e1e1e;
+            padding: 25px 20px;
             text-align: center;
+            border-bottom: 3px solid #4CAF50;
+        }
+        header h1 {
+            font-size: 3em;
+            color: #4CAF50;
         }
         nav {
-            background-color: #333;
+            display: flex;
+            justify-content: center;
+            background-color: #1f1f1f;
+            border-bottom: 1px solid #333;
         }
         nav a {
-            color: white;
-            padding: 14px 20px;
-            display: inline-block;
+            color: #f0f0f0;
+            padding: 15px 30px;
             text-decoration: none;
+            font-weight: bold;
+            transition: 0.3s;
         }
         nav a:hover {
-            background-color: #ddd;
-            color: black;
+            background-color: #4CAF50;
+            color: #fff;
         }
         main {
-            padding: 20px;
+            padding: 50px 20px;
+            max-width: 1000px;
+            margin: auto;
+        }
+        section {
+            margin-bottom: 60px;
+        }
+        section h2 {
+            font-size: 2.2em;
+            color: #4CAF50;
+            margin-bottom: 20px;
+            border-bottom: 2px solid #4CAF50;
+            display: inline-block;
+            padding-bottom: 5px;
+        }
+        section p, section ul {
+            font-size: 1.1em;
+            margin-bottom: 15px;
+        }
+        ul {
+            list-style: none;
+        }
+        ul li::before {
+            content: "✔ ";
+            color: #4CAF50;
         }
         footer {
+            background-color: #1e1e1e;
+            text-align: center;
+            padding: 15px;
+            border-top: 3px solid #4CAF50;
+        }
+        a.button {
+            display: inline-block;
+            padding: 12px 25px;
             background-color: #4CAF50;
             color: white;
-            text-align: center;
-            padding: 10px;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-        button {
-            padding: 10px 20px;
-            font-size: 16px;
+            text-decoration: none;
+            border-radius: 5px;
             margin-top: 10px;
-            cursor: pointer;
+            transition: 0.3s;
+        }
+        a.button:hover {
+            background-color: #45a049;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Bem-vindo ao Meu Site!</h1>
+        <h1>JCube</h1>
+        <p>Inovação em Jogos, Animes e Filmes</p>
     </header>
 
     <nav>
         <a href="#home">Home</a>
-        <a href="#sobre">Sobre</a>
+        <a href="#informacoes">Informações</a>
         <a href="#contato">Contato</a>
     </nav>
 
     <main>
         <section id="home">
-            <h2>Home</h2>
-            <p>Este é o conteúdo inicial do seu site. Você pode editar este texto direto no GitHub ou no seu editor.</p>
-            <button onclick="mostrarMensagem()">Clique aqui</button>
+            <h2>Bem-vindo à JCube</h2>
+            <p>A JCube é uma empresa dedicada a criar experiências de entretenimento únicas, combinando criatividade, tecnologia e paixão por jogos, animes e filmes.</p>
+            <a href="#contato" class="button">Entre em Contato</a>
         </section>
 
-        <section id="sobre">
-            <h2>Sobre</h2>
-            <p>Informações sobre você ou sobre o site podem ir aqui.</p>
+        <section id="informacoes">
+            <h2>Informações</h2>
+            <p>A JCube atua nos seguintes segmentos:</p>
+            <ul>
+                <li>🎮 Desenvolvimento de jogos inovadores para PC, consoles e dispositivos móveis.</li>
+                <li>📺 Produção de animes originais e licenciados de alta qualidade.</li>
+                <li>🎬 Criação e distribuição de filmes animados e live-action.</li>
+            </ul>
+            <p>Nosso objetivo é entregar produtos que encantem fãs ao redor do mundo, mantendo padrão profissional, inovação e criatividade em todos os projetos.</p>
         </section>
 
         <section id="contato">
             <h2>Contato</h2>
-            <p>Email: exemplo@email.com</p>
+            <p>Para dúvidas, parcerias ou mais informações, entre em contato:</p>
+            <p>Email: <a href="mailto:JcubeSuport@gmail.com" style="color:#4CAF50;">JcubeSuport@gmail.com</a></p>
         </section>
     </main>
 
     <footer>
-        &copy; 2025 Meu Site
+        &copy; 2025 JCube. Todos os direitos reservados.
     </footer>
-
-    <script>
-        function mostrarMensagem() {
-            alert('Olá! Você clicou no botão.');
-        }
-    </script>
 </body>
 </html>
