--- a/index.html
+++ b/index.html
@@ -1,76 +1,71 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JCube</title>
     <style>
         /* Reset e estilo base */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #121212;
-            color: #f0f0f0;
-            line-height: 1.6;
-        }
+        * { margin: 0; padding: 0; box-sizing: border-box; }
+        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #121212; color: #f0f0f0; line-height: 1.6; }
+
         header {
             background-color: #1e1e1e;
             padding: 25px 20px;
             text-align: center;
             border-bottom: 3px solid #4CAF50;
+            position: relative;
         }
-        header h1 {
-            font-size: 3em;
-            color: #4CAF50;
+        header h1 { font-size: 3em; color: #4CAF50; }
+        header p { margin-top: 5px; }
+
+        /* Menu de três pontinhos */
+        .menu-dots {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            font-size: 2em;
+            cursor: pointer;
         }
+        .dropdown {
+            display: none;
+            position: absolute;
+            top: 60px;
+            right: 20px;
+            background-color: #1f1f1f;
+            border: 1px solid #4CAF50;
+            border-radius: 5px;
+            overflow: hidden;
+            min-width: 150px;
+            z-index: 100;
+        }
+        .dropdown a {
+            display: block;
+            color: #f0f0f0;
+            padding: 12px 15px;
+            text-decoration: none;
+        }
+        .dropdown a:hover { background-color: #4CAF50; color: #fff; }
+
         nav {
             display: flex;
             justify-content: center;
             background-color: #1f1f1f;
             border-bottom: 1px solid #333;
         }
-        nav a {
-            color: #f0f0f0;
-            padding: 15px 30px;
-            text-decoration: none;
-            font-weight: bold;
-            transition: 0.3s;
-        }
-        nav a:hover {
-            background-color: #4CAF50;
-            color: #fff;
-        }
-        main {
-            padding: 50px 20px;
-            max-width: 1000px;
-            margin: auto;
-        }
-        section {
-            margin-bottom: 60px;
-        }
+        nav a { color: #f0f0f0; padding: 15px 30px; text-decoration: none; font-weight: bold; transition: 0.3s; }
+        nav a:hover { background-color: #4CAF50; color: #fff; }
+
+        main { padding: 50px 20px; max-width: 1000px; margin: auto; }
+        section { margin-bottom: 60px; }
         section h2 {
-            font-size: 2.2em;
-            color: #4CAF50;
-            margin-bottom: 20px;
-            border-bottom: 2px solid #4CAF50;
-            display: inline-block;
-            padding-bottom: 5px;
+            font-size: 2.2em; color: #4CAF50; margin-bottom: 20px;
+            border-bottom: 2px solid #4CAF50; display: inline-block; padding-bottom: 5px;
         }
-        section p, section ul {
-            font-size: 1.1em;
-            margin-bottom: 15px;
-        }
-        ul {
-            list-style: none;
-        }
-        ul li::before {
-            content: "✔ ";
-            color: #4CAF50;
-        }
+        section p, section ul { font-size: 1.1em; margin-bottom: 15px; }
+        ul { list-style: none; }
+        ul li::before { content: "✔ "; color: #4CAF50; }
+
         footer {
             background-color: #1e1e1e;
             text-align: center;
@@ -78,17 +73,21 @@
             border-top: 3px solid #4CAF50;
         }
         a.button {
-            display: inline-block;
-            padding: 12px 25px;
-            background-color: #4CAF50;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            margin-top: 10px;
-            transition: 0.3s;
+            display: inline-block; padding: 12px 25px; background-color: #4CAF50; color: white; text-decoration: none;
+            border-radius: 5px; margin-top: 10px; transition: 0.3s;
         }
-        a.button:hover {
-            background-color: #45a049;
+        a.button:hover { background-color: #45a049; }
+
+        /* Estilo do seletor de idioma */
+        #language-selector {
+            display: block;
+            margin-top: 10px;
+            background-color: #1f1f1f;
+            color: #f0f0f0;
+            border: 1px solid #4CAF50;
+            padding: 8px 12px;
+            border-radius: 5px;
+            cursor: pointer;
         }
     </style>
 </head>
@@ -96,6 +95,19 @@
     <header>
         <h1>JCube</h1>
         <p>Inovação em Jogos, Animes e Filmes</p>
+
+        <div class="menu-dots" onclick="toggleMenu()">⋮</div>
+        <div class="dropdown" id="dropdown-menu">
+            <label for="language-selector" style="padding:12px 15px; display:block;">Idioma:</label>
+            <select id="language-selector" onchange="changeLanguage()">
+                <option value="en" selected>English</option>
+                <option value="pt">Português</option>
+                <option value="es">Español</option>
+                <option value="fr">Français</option>
+                <option value="de">Deutsch</option>
+                <option value="ja">日本語</option>
+            </select>
+        </div>
     </header>
 
     <nav>
@@ -107,24 +119,24 @@
     <main>
         <section id="home">
             <h2>Bem-vindo à JCube</h2>
-            <p>A JCube é uma empresa dedicada a criar experiências de entretenimento únicas, combinando criatividade, tecnologia e paixão por jogos, animes e filmes.</p>
-            <a href="#contato" class="button">Entre em Contato</a>
+            <p id="home-text">A JCube é uma empresa dedicada a criar experiências de entretenimento únicas, combinando criatividade, tecnologia e paixão por jogos, animes e filmes.</p>
+            <a href="#contato" class="button" id="contact-button">Entre em Contato</a>
         </section>
 
         <section id="informacoes">
             <h2>Informações</h2>
-            <p>A JCube atua nos seguintes segmentos:</p>
-            <ul>
+            <p id="info-text">A JCube atua nos seguintes segmentos:</p>
+            <ul id="info-list">
                 <li>🎮 Desenvolvimento de jogos inovadores para PC, consoles e dispositivos móveis.</li>
                 <li>📺 Produção de animes originais e licenciados de alta qualidade.</li>
                 <li>🎬 Criação e distribuição de filmes animados e live-action.</li>
             </ul>
-            <p>Nosso objetivo é entregar produtos que encantem fãs ao redor do mundo, mantendo padrão profissional, inovação e criatividade em todos os projetos.</p>
+            <p id="info-text2">Nosso objetivo é entregar produtos que encantem fãs ao redor do mundo, mantendo padrão profissional, inovação e criatividade em todos os projetos.</p>
         </section>
 
         <section id="contato">
             <h2>Contato</h2>
-            <p>Para dúvidas, parcerias ou mais informações, entre em contato:</p>
+            <p id="contact-text">Para dúvidas, parcerias ou mais informações, entre em contato:</p>
             <p>Email: <a href="mailto:JcubeSuport@gmail.com" style="color:#4CAF50;">JcubeSuport@gmail.com</a></p>
         </section>
     </main>
@@ -132,5 +144,41 @@
     <footer>
         &copy; 2025 JCube. Todos os direitos reservados.
     </footer>
+
+    <script>
+        // Função para mostrar/esconder o menu
+        function toggleMenu() {
+            const menu = document.getElementById('dropdown-menu');
+            menu.style.display = (menu.style.display === 'block') ? 'none' : 'block';
+        }
+
+        // Função para trocar idioma (apenas exemplo simples)
+        function changeLanguage() {
+            const lang = document.getElementById('language-selector').value;
+            if (lang === 'pt') {
+                document.getElementById('home-text').textContent = 'A JCube é uma empresa dedicada a criar experiências de entretenimento únicas, combinando criatividade, tecnologia e paixão por jogos, animes e filmes.';
+                document.getElementById('info-text').textContent = 'A JCube atua nos seguintes segmentos:';
+                document.getElementById('info-list').innerHTML = '<li>🎮 Desenvolvimento de jogos inovadores para PC, consoles e dispositivos móveis.</li><li>📺 Produção de animes originais e licenciados de alta qualidade.</li><li>🎬 Criação e distribuição de filmes animados e live-action.</li>';
+                document.getElementById('info-text2').textContent = 'Nosso objetivo é entregar produtos que encantem fãs ao redor do mundo, mantendo padrão profissional, inovação e criatividade em todos os projetos.';
+                document.getElementById('contact-text').textContent = 'Para dúvidas, parcerias ou mais informações, entre em contato:';
+                document.getElementById('contact-button').textContent = 'Entre em Contato';
+            } else {
+                document.getElementById('home-text').textContent = 'JCube is a company dedicated to creating unique entertainment experiences, combining creativity, technology, and passion for games, anime, and films.';
+                document.getElementById('info-text').textContent = 'JCube operates in the following segments:';
+                document.getElementById('info-list').innerHTML = '<li>🎮 Development of innovative games for PC, consoles, and mobile devices.</li><li>📺 Production of original and licensed high-quality anime.</li><li>🎬 Creation and distribution of animated and live-action films.</li>';
+                document.getElementById('info-text2').textContent = 'Our goal is to deliver products that delight fans worldwide, maintaining professional standards, innovation, and creativity in every project.';
+                document.getElementById('contact-text').textContent = 'For inquiries, partnerships, or more information, contact us:';
+                document.getElementById('contact-button').textContent = 'Contact Us';
+            }
+        }
+
+        // Fecha menu se clicar fora
+        window.onclick = function(event) {
+            if (!event.target.matches('.menu-dots') && !event.target.matches('#language-selector')) {
+                const menu = document.getElementById('dropdown-menu');
+                if (menu.style.display === 'block') menu.style.display = 'none';
+            }
+        }
+    </script>
 </body>
 </html>
