--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JCube</title>
     <style>
-        /* Reset e estilo base */
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #121212; color: #f0f0f0; line-height: 1.6; }
 
@@ -39,25 +38,42 @@
             min-width: 150px;
             z-index: 100;
         }
-        .dropdown a {
+        .dropdown label { display: block; padding: 12px 15px; }
+        .dropdown select {
+            width: 90%;
+            margin: 10px auto;
             display: block;
+            padding: 8px;
+            border-radius: 5px;
+            border: 1px solid #4CAF50;
+            background-color: #1f1f1f;
             color: #f0f0f0;
-            padding: 12px 15px;
-            text-decoration: none;
         }
-        .dropdown a:hover { background-color: #4CAF50; color: #fff; }
 
+        /* Abas */
         nav {
             display: flex;
             justify-content: center;
             background-color: #1f1f1f;
             border-bottom: 1px solid #333;
         }
-        nav a { color: #f0f0f0; padding: 15px 30px; text-decoration: none; font-weight: bold; transition: 0.3s; }
-        nav a:hover { background-color: #4CAF50; color: #fff; }
+        nav button {
+            color: #f0f0f0;
+            padding: 15px 30px;
+            background: none;
+            border: none;
+            font-weight: bold;
+            cursor: pointer;
+            transition: 0.3s;
+        }
+        nav button:hover, nav button.active {
+            background-color: #4CAF50;
+            color: #fff;
+        }
 
         main { padding: 50px 20px; max-width: 1000px; margin: auto; }
-        section { margin-bottom: 60px; }
+        section { display: none; }
+        section.active { display: block; }
         section h2 {
             font-size: 2.2em; color: #4CAF50; margin-bottom: 20px;
             border-bottom: 2px solid #4CAF50; display: inline-block; padding-bottom: 5px;
@@ -77,18 +93,6 @@
             border-radius: 5px; margin-top: 10px; transition: 0.3s;
         }
         a.button:hover { background-color: #45a049; }
-
-        /* Estilo do seletor de idioma */
-        #language-selector {
-            display: block;
-            margin-top: 10px;
-            background-color: #1f1f1f;
-            color: #f0f0f0;
-            border: 1px solid #4CAF50;
-            padding: 8px 12px;
-            border-radius: 5px;
-            cursor: pointer;
-        }
     </style>
 </head>
 <body>
@@ -98,7 +102,7 @@
 
         <div class="menu-dots" onclick="toggleMenu()">⋮</div>
         <div class="dropdown" id="dropdown-menu">
-            <label for="language-selector" style="padding:12px 15px; display:block;">Idioma:</label>
+            <label for="language-selector">Idioma:</label>
             <select id="language-selector" onchange="changeLanguage()">
                 <option value="en" selected>English</option>
                 <option value="pt">Português</option>
@@ -111,13 +115,13 @@
     </header>
 
     <nav>
-        <a href="#home">Home</a>
-        <a href="#informacoes">Informações</a>
-        <a href="#contato">Contato</a>
+        <button class="tab-button active" onclick="showTab('home')">Home</button>
+        <button class="tab-button" onclick="showTab('informacoes')">Informações</button>
+        <button class="tab-button" onclick="showTab('contato')">Contato</button>
     </nav>
 
     <main>
-        <section id="home">
+        <section id="home" class="active">
             <h2>Bem-vindo à JCube</h2>
             <p id="home-text">A JCube é uma empresa dedicada a criar experiências de entretenimento únicas, combinando criatividade, tecnologia e paixão por jogos, animes e filmes.</p>
             <a href="#contato" class="button" id="contact-button">Entre em Contato</a>
@@ -146,13 +150,30 @@
     </footer>
 
     <script>
-        // Função para mostrar/esconder o menu
+        // Menu de três pontinhos
         function toggleMenu() {
             const menu = document.getElementById('dropdown-menu');
             menu.style.display = (menu.style.display === 'block') ? 'none' : 'block';
         }
+        window.onclick = function(event) {
+            if (!event.target.matches('.menu-dots') && !event.target.matches('#language-selector')) {
+                const menu = document.getElementById('dropdown-menu');
+                if (menu.style.display === 'block') menu.style.display = 'none';
+            }
+        }
 
-        // Função para trocar idioma (apenas exemplo simples)
+        // Função para mostrar abas
+        function showTab(tabId) {
+            const tabs = document.querySelectorAll('section');
+            tabs.forEach(tab => tab.classList.remove('active'));
+            document.getElementById(tabId).classList.add('active');
+
+            const buttons = document.querySelectorAll('.tab-button');
+            buttons.forEach(btn => btn.classList.remove('active'));
+            document.querySelector(`button[onclick="showTab('${tabId}')"]`).classList.add('active');
+        }
+
+        // Troca de idioma (apenas EN/PT como exemplo)
         function changeLanguage() {
             const lang = document.getElementById('language-selector').value;
             if (lang === 'pt') {
@@ -169,14 +190,6 @@
                 document.getElementById('info-text2').textContent = 'Our goal is to deliver products that delight fans worldwide, maintaining professional standards, innovation, and creativity in every project.';
                 document.getElementById('contact-text').textContent = 'For inquiries, partnerships, or more information, contact us:';
                 document.getElementById('contact-button').textContent = 'Contact Us';
-            }
-        }
-
-        // Fecha menu se clicar fora
-        window.onclick = function(event) {
-            if (!event.target.matches('.menu-dots') && !event.target.matches('#language-selector')) {
-                const menu = document.getElementById('dropdown-menu');
-                if (menu.style.display === 'block') menu.style.display = 'none';
             }
         }
     </script>
